[workspace]
members = [
    "kailua_env",
    "kailua_diag",
    "kailua_test",
    "kailua_syntax",
    "kailua_check",
    "kailua_vs",
    "kailua_langsvr",
    "kailua_langsvr_protocol",
]

[profile.release]
lto = true

# required by kailua_langsvr
[replace]
"futures:0.1.9" = { git = "https://github.com/alexcrichton/futures-rs/", rev = "c33c740" }
"futures-cpupool:0.1.2" = { git = "https://github.com/alexcrichton/futures-rs/", rev = "c33c740" }
