[package]
name = "kailua"
version = "0.1.0"
authors = ["Kang Seonghoon <public+git@mearie.org>"]

description = "🌴 Type Checker and IDE Support for Lua"

[[bin]]
name = "kailua"

[dependencies]
env_logger = "0.4.2"
clap = "2"
errln = "0.1"
kailua_env = { path = "kailua_env" }
kailua_diag = { path = "kailua_diag" }
kailua_syntax = { path = "kailua_syntax" }
kailua_check = { path = "kailua_check" }
kailua_workspace = { path = "kailua_workspace" }
kailua_langsvr = { path = "kailua_langsvr" }

[workspace]
members = [
    "kailua_env",
    "kailua_diag",
    "kailua_test",
    "kailua_syntax",
    "kailua_types",
    "kailua_check",
    "kailua_workspace",
    "kailua_langsvr",
    "kailua_langsvr_protocol",
]

[profile.release]
lto = true
debug = true # TODO

