[package]
name = "kailua_check"
version = "0.1.0"
authors = ["Kang Seonghoon <public+git@mearie.org>"]
publish = false

[[bin]]
name = "kailua-check"
doc = false

[[test]]
name = "kailua-check-test"
harness = false

[dependencies]
log = "0.3"
env_logger = "0.3"
bitflags = "0.7"
vec_map = "0.4"
take_mut = "0.1"
parse-generics-shim = "0.1.0"
kailua_env = { path = "../kailua_env" }
kailua_diag = { path = "../kailua_diag" }
kailua_syntax = { path = "../kailua_syntax" }

[dev-dependencies]
clap = "2"
kailua_test = { path = "../kailua_test" }
