[package]
name = "kailua_check"
version = "0.1.0"
authors = ["Kang Seonghoon <public+git@mearie.org>"]
publish = false

description = "Type checker for Kailua"

[[bin]]
name = "kailua-check"
doc = false

[[test]]
name = "kailua-check-test"
harness = false

[features]
default = ["no_implicit_func_sig"]
no_implicit_func_sig = []
warn_on_useless_conds = []
warn_on_dead_code = []

[dependencies]
log = "0.3.7"
env_logger = "0.4.2"
take_mut = "0.1"
parse-generics-shim = "0.1.0"
kailua_env = { path = "../kailua_env" }
kailua_diag = { path = "../kailua_diag" }
kailua_syntax = { path = "../kailua_syntax" }
kailua_types = { path = "../kailua_types" }

[dev-dependencies]
clap = "2"
kailua_test = { path = "../kailua_test" }
