[package]
name = "kailua_check"
version = "1.0.5"
authors = ["Nexon Corporation", "Kang Seonghoon <public+git@mearie.org>"]

description = "Type checker for Kailua"
homepage = "https://github.com/devcat-studio/kailua"
documentation = "https://docs.rs/kailua_syntax/"
repository = "https://github.com/devcat-studio/kailua.git"
keywords = ["lua", "kailua", "language", "type-system", "type-checker"]
categories = ["development-tools"]
license = "MIT/Apache-2.0"

[[bin]]
name = "kailua-check"
doc = false

[[test]]
name = "kailua-check-test"
harness = false

[features]
default = ["no_implicit_func_sig"]
no_implicit_func_sig = []
warn_on_useless_conds = []
warn_on_dead_code = []

[dependencies]
log = "0.3.7"
env_logger = "0.4.2"
take_mut = "0.1"
parse-generics-shim = "0.1.0"
parking_lot = "0.3"
vec_map = "0.7.0"
kailua_env = { version = "1.0.4", path = "../kailua_env" }
kailua_diag = { version = "1.0.4", path = "../kailua_diag" }
kailua_syntax = { version = "1.0.5", path = "../kailua_syntax" }
kailua_types = { version = "1.0.5", path = "../kailua_types" }

[dev-dependencies]
clap = "2"
kailua_test = { version = "1.0.4", path = "../kailua_test" }
