[package]
name = "kailua_diag"
version = "0.1.0"
authors = ["Kang Seonghoon <public+git@mearie.org>"]

description = "Diagnostics and rudimentary localization support for Kailua"

[dependencies]
log = "0.3"
term = "0.4.4"
unicode-width = "0.1.3"
parse-generics-shim = "0.1.0"
winapi = "0.2.7"
kernel32-sys = "0.2.2"
kailua_env = { version = "0.1.0", path = "../kailua_env" }
