[package]
name = "kailua_langsvr"
version = "0.1.0"
authors = ["Kang Seonghoon <public+git@mearie.org>"]
publish = false

[[bin]]
name = "kailua-langsvr"

[dependencies]
log = "0.3"
env_logger = "0.3"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
url = "1.2"
futures = "0.1.13"
futures-cpupool = "0.1.5"
tokio-timer = "0.1.0"
owning_ref = "0.2"
num_cpus = "1.2"
parking_lot = "0.3"
errln = "0.1"
walkdir = "1"
parse-generics-shim = "0.1.0"
kailua_env = { path = "../kailua_env" }
kailua_diag = { path = "../kailua_diag" }
kailua_syntax = { path = "../kailua_syntax" }
kailua_check = { path = "../kailua_check" }
kailua_langsvr_protocol = { path = "../kailua_langsvr_protocol" }

