[package]
name = "kailua_langsvr"
version = "1.0.5"
authors = ["Nexon Corporation", "Kang Seonghoon <public+git@mearie.org>"]

description = "Language server implementation for Kailua"
homepage = "https://github.com/devcat-studio/kailua"
documentation = "https://docs.rs/kailua_langsvr/"
repository = "https://github.com/devcat-studio/kailua.git"
keywords = ["lua", "kailua", "language", "language-server"]
categories = ["development-tools"]
license = "MIT/Apache-2.0"

[dependencies]
log = "0.3.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1.2"
futures = "0.1.13"
futures-cpupool = "0.1.5"
tokio-timer = "0.1.0"
owning_ref = "0.2"
num_cpus = "1.2"
parking_lot = "0.3"
walkdir = "1"
parse-generics-shim = "0.1.0"
kailua_env = { version = "1.0.4", path = "../kailua_env" }
kailua_diag = { version = "1.0.4", path = "../kailua_diag" }
kailua_syntax = { version = "1.0.5", path = "../kailua_syntax" }
kailua_types = { version = "1.0.5", path = "../kailua_types" }
kailua_check = { version = "1.0.5", path = "../kailua_check" }
kailua_workspace = { version = "1.0.5", path = "../kailua_workspace" }
kailua_langsvr_protocol = { version = "1.0.5", path = "../kailua_langsvr_protocol" }

