[package]
name = "kailua_langsvr_protocol"
version = "1.0.5"
authors = ["Nexon Corporation", "Kang Seonghoon <public+git@mearie.org>"]

description = "Language server protocol types for Kailua"
homepage = "https://github.com/devcat-studio/kailua"
documentation = "https://docs.rs/kailua_langsvr_protocol/"
repository = "https://github.com/devcat-studio/kailua.git"
keywords = ["language-server"]
categories = ["development-tools"]
license = "MIT/Apache-2.0"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

