[package]
name = "kailua_syntax"
version = "0.1.0"
authors = ["Kang Seonghoon <public+git@mearie.org>"]
publish = false

description = "AST and parser for Kailua"

[[bin]]
name = "kailua-parse"
doc = false

[[test]]
name = "kailua-parse-test"
harness = false

[dependencies]
log = "0.3"
parse-generics-shim = "0.1.0"
kailua_env = { path = "../kailua_env" }
kailua_diag = { path = "../kailua_diag" }

[dev-dependencies]
env_logger = "0.3"
regex = "0.1"
clap = "2"
kailua_test = { path = "../kailua_test" }
