[package]
name = "kailua_syntax"
version = "0.1.0"
authors = ["Kang Seonghoon <public+git@mearie.org>"]

description = "AST and parser for Kailua"

[[bin]]
name = "kailua-parse"
doc = false

[[test]]
name = "kailua-parse-test"
harness = false

[dependencies]
log = "0.3.7"
parse-generics-shim = "*"
kailua_env = { version = "0.1.0", path = "../kailua_env" }
kailua_diag = { version = "0.1.0", path = "../kailua_diag" }

[dev-dependencies]
env_logger = "0.4.2"
regex = "0.2.1"
clap = "2"
kailua_test = { version = "0.1.0", path = "../kailua_test" }
