[package]
name = "kailua_syntax"
version = "1.0.4"
authors = ["Nexon Corporation", "Kang Seonghoon <public+git@mearie.org>"]

description = "AST and parser for Kailua"
homepage = "https://github.com/devcat-studio/kailua"
documentation = "https://docs.rs/kailua_syntax/"
repository = "https://github.com/devcat-studio/kailua.git"
keywords = ["lua", "kailua", "language", "parser"]
categories = ["development-tools", "parser-implementations"]
license = "MIT/Apache-2.0"

[[bin]]
name = "kailua-parse"
doc = false

[[test]]
name = "kailua-parse-test"
harness = false

[dependencies]
log = "0.3.7"
parse-generics-shim = "*"
kailua_env = { version = "1.0.4", path = "../kailua_env" }
kailua_diag = { version = "1.0.4", path = "../kailua_diag" }

[dev-dependencies]
env_logger = "0.4.2"
regex = "0.2.1"
clap = "2"
kailua_test = { version = "1.0.4", path = "../kailua_test" }
