[package]
name = "kailua_test"
version = "0.1.0"
authors = ["Kang Seonghoon <public+git@mearie.org>"]

description = "Test harness for Kailua"

[dependencies]
log = "0.3"
term = "0.4.4"
regex = "0.2.1"
lazy_static = "0.2"
clap = "2"
kailua_env = { version = "0.1.0", path = "../kailua_env" }
kailua_diag = { version = "0.1.0", path = "../kailua_diag" }
