[package]
name = "kailua_types"
version = "0.1.0"
authors = ["Kang Seonghoon <public+git@mearie.org>"]

description = "Type system for Kailua"

[dependencies]
log = "0.3.7"
env_logger = "0.4.2"
bitflags = "0.8.2"
vec_map = "0.7.0"
take_mut = "0.1"
parse-generics-shim = "0.1.0"
atomic = "0.3"
parking_lot = "0.3"
kailua_env = { version = "0.1.0", path = "../kailua_env" }
kailua_diag = { version = "0.1.0", path = "../kailua_diag" }
kailua_syntax = { version = "0.1.0", path = "../kailua_syntax" }

