[package]
name = "kailua_vs"
version = "0.1.0"
authors = ["Kang Seonghoon <public+git@mearie.org>"]
publish = false

[lib]
name = "KailuaVSNative"
crate-type = ["cdylib"]

[dependencies]
widestring = "0.2.2"
kailua_env = { path = "../kailua_env" }
kailua_diag = { path = "../kailua_diag" }
kailua_syntax = { path = "../kailua_syntax" }
kailua_check = { path = "../kailua_check" }

[profile.release]
lto = true

