[package]
name = "kailua_workspace"
version = "0.1.0"
authors = ["Kang Seonghoon <public+git@mearie.org>"]

description = "Workspace support for Kailua"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
regex = "0.2.1"
lazy_static = "0.2"
parse-generics-shim = "0.1.0"
kailua_env = { version = "0.1.0", path = "../kailua_env" }
kailua_diag = { version = "0.1.0", path = "../kailua_diag" }
kailua_syntax = { version = "0.1.0", path = "../kailua_syntax" }
kailua_check = { version = "0.1.0", path = "../kailua_check" }

