[package]
name = "kailua_workspace"
version = "1.0.5"
authors = ["Nexon Corporation", "Kang Seonghoon <public+git@mearie.org>"]

description = "Workspace support for Kailua"
homepage = "https://github.com/devcat-studio/kailua"
documentation = "https://docs.rs/kailua_workspace/"
repository = "https://github.com/devcat-studio/kailua.git"
keywords = ["kailua"]
categories = ["development-tools"]
license = "MIT/Apache-2.0"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
regex = "0.2.1"
lazy_static = "0.2"
parse-generics-shim = "0.1.0"
kailua_env = { version = "1.0.4", path = "../kailua_env" }
kailua_diag = { version = "1.0.4", path = "../kailua_diag" }
kailua_syntax = { version = "1.0.5", path = "../kailua_syntax" }
kailua_check = { version = "1.0.5", path = "../kailua_check" }

